--- a/assets/locale/i18n_en.json
+++ b/assets/locale/i18n_en.json
@@ -1,7 +1,7 @@
 {
-  "chapters":"Suras",
-  "words": "Sözlər",
-  "themes": "Mövzular",
-  "names": "Adlar",
-  "other": "Digər"
+  "chapters":"Psalms",
+  "words": "First Word",
+  "themes": "Theme",
+  "names": "Docs",
+  "other": "Other"
 }
