--- a/assets/locale/i18n_tr.json
+++ b/assets/locale/i18n_tr.json
@@ -1,7 +1,14 @@
 {
-  "chapters":"Sureler",
-  "words": "Sözlər",
-  "themes": "Mövzular",
-  "names": "Adlar",
-  "other": "Digər"
+  "psalm": "Mezmur",
+  "psalms":"Mezmurlar",
+  "word": "İlk satır",
+  "theme": "Mevzu",
+  "doc": "Docs",
+  "other": "Diğer",
+  "search": "Ara",
+  "page_search": "Sayfada ara...",
+  "all": "Tümü",
+  "verses": "Kısta",
+  "words": "Latince İlk Satır",
+  "copied_psalm": "Panoya kopyandı! - Mezmur"
 }
